--- a/index.html
+++ b/index.html
@@ -84,6 +84,161 @@
             </section>
             <!-- Profile Sectiion ends -->
 
+                    <!-- Software section begins -->
+        <section id="software">
+            <div class="row text-center align-items-center">
+                <div id="BG" class="justify-content-center vertical-center col-md-6">
+                    <h2 class="display-2">Software</h2>
+                </div> 
+                <div class="col-md-6 text-center">
+                    <div class="row justify-content-center">
+                        <div class="col-10 col-lg-8 sideContent py-5">
+                                <table class="table">
+                                        <thead class="thead-dark">
+                                            <tr>
+                                                <th scope="col">Project Name</th>
+                                                <th scope="col">Description</th>
+                                                <th scope="col">Tech</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td><a href="https://github.com/EnergyCoreUAGM/MobileApplication_Grid"><u>HEMS Android</u></a></td>
+                                                <td>Android application designed to monitor and control microgrid in a smart house for energy efficiency.<br>
+                                                    Journal Summary: Security in an IoT network and a mobile
+                                                    application for micro-grids control & monitoring to minimize
+                                                    the waste of energy. Results was presented in the CIESESE
+                                                    2020 Technical forum and in the CCWC 2020 IEEE
+                                                </td>
+                                                <td>Java, Firebase Firestore and Python</td>
+                                            </tr>
+                                            <tr>
+                                                <td><a href="https://github.com/EnergyCoreUAGM/WebConsole"><u>HEMS Web Console</u></a></td>
+                                                <td>Web console version of HEMS for Android that is used to monitor and track your users and devices that are connected to pertaining users microgrid.</td>
+                                                <td>JavaScript, HTML, CSS and Firebase Firestore </td>
+                                            </tr>
+                                            <tr>
+                                                <td><a href="https://github.com/shervinf1/BlackBookStrength"><u>BlackBook Strength</u></a></td>
+                                                <td>Android application designed mainly for people that train using the
+                                                    5 3 1 powerlifting philosophy that need a place to track there
+                                                    progress and calculate their next lifts.
+                                                    BlackBook Strength, among other features, also gives the user the
+                                                    ability to add assistance exercises, input their daily goal for calories
+                                                    and weightins but also track them.
+                                                    Application is fully scalable and allows the user to create and
+                                                    register their own account, with added functionality to reset
+                                                    password.</td>
+                                                <td>Java and Firebase</td>
+                                            </tr>
+                                            <tr>
+                                                <td><a href="https://github.com/shervinf1/ApplicationTracker"><u>Application Tracker</u></a></td>
+                                                <td>Creating an android application to keep track of job and internship
+                                                    applications.
+                                                    Android application is mainly going to be used as the client side to
+                                                    view the job applications that I have currently applied to.
+                                                    Application Tracker server side is a python script that is run in the
+                                                    terminal, to reduce start up time when using a GUI, which will be
+                                                    the main way of adding new applications to the database.</td>
+                                                <td>Java and Firebase</td>
+                                            </tr>
+                                            <tr>
+                                                <td><a href="https://github.com/shervinf1/MyLifeInWeeks"><u>My Life in Weeks</u></a></td>
+                                                <td>Simple application that is mainly used to provide the user with a
+                                                    visual graphic of their life in weeks.
+                                                    Basically the user enters their DOB and the application will
+                                                    calculate how many weeks there is from their DOB to current day.
+                                                    The user is then presented with a list of squares each representing
+                                                    a week for 98 years and using the number calculated from their
+                                                    DOB is the amount of squares that will be filled out.</td>
+                                                <td>Java and Firebase</td>
+                                            </tr>
+                                            <tr>
+                                                <td><a href="https://github.com/shervinf1/Library"><u>Library Database</u></a></td>
+                                                <td>Library database using data structures such as binary search trees, circular doubly linked list and singly linked lists.</td>
+                                                <td>C++</td>
+                                            </tr>
+                                            <tr>
+                                                <td><a href="https://github.com/shervinf1/FlashChat-Firebase-Android"><u>FlashChat App</u></a></td>
+                                                <td>WhatsApp clone for Android, using Firebase Authentication and SharedPreferences</td>
+                                                <td>Java</td>
+                                            </tr>
+                                            <tr>
+                                                <td><a href="https://github.com/shervinf1/Dicee"><u>Dicee</u></a></td>
+                                                <td>Android app that works as a random dice thrower</td>
+                                                <td>Java</td>
+                                            </tr>
+                                        </tbody>
+                                </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Software section ends -->
+
+
+
+            <!-- Work Sectiion begins -->
+            <section id="work">
+                <div class="row text-center align-items-center">
+                    <div class="col-md-6 text-center">
+                        <div class="row justify-content-center">
+                            <div class="col-10 col-lg-8 sideContent mb-md-0 py-5 ">
+                                <div class="text-left">
+                                    <h3>CIESESE</h3>
+                                    <h4>Student Researcher</h4>
+                                    <h5>Jan 2020 - Present</h5>
+                                    <p class="lead">Tasked to develop Android Application and Web Console
+                                        with Firestore Database for managing micro-grid.
+                                        <br>Journal Summary: Security in an IoT network and a mobile
+                                        application for micro-grids control & monitoring to minimize
+                                        the waste of energy. Results was presented in the CIESESE
+                                        2020 Technical forum and in the CCWC 2020 IEEE
+                                        Conference.
+                                        <br>Tech used:Android,Java, XML,Python, UFW, LOIC, Metasploit,
+                                        Firebase, Fail2Ban and XBees.
+                                    </p>
+                                    <br>
+                                    <h3>Universidad Ana G. Méndez</h3>
+                                    <h4>Electrical Networks Tutor</h4>
+                                    <h5>Feb 2019 - May 2019</h5>
+                                    <p class="lead"><br>Tutored and assisted fellow students with topics such as
+                                        KCL/KVL, Thevenin and Norton Theorems, mesh and nodal
+                                        analysis and other topics related to circuits and electrical
+                                        networks.
+                                        <br>My tutoring helped students raise their grades by around
+                                        20%-30%.
+                                    </p>
+                                    <br>
+                                    <h3>Universidad Ana G. Méndez</h3>
+                                    <h4>Vice-President</h4>
+                                    <h5>Aug 2018 - Jan 2020</h5>
+                                    <p class="lead">Vice-President of Hack UAGM, which is a non-profit computer engineering organization in UAGM that 
+                                        is focused on bringing certain tools to fellow collegues that may need to further their
+                                        knowledge in the field pertaining to computer science and engineering. We do so by providing
+                                        programming workshops, hackathons and company tours realted to the field.
+                                    </p>
+                                    <br>
+                                    <h3>Universidad Ana G. Méndez</h3>
+                                    <h4>Electrical Networks Tutor</h4>
+                                    <h5>Feb 2019 - Present</h5>
+                                    <p class="lead">As an Electrical Networks tutor, I help fellow students with topics
+                                        such as KCL/KVL, Thevenin and Norton Theorems, mesh analysis, nodal analysis and other 
+                                        topics related to circuits and electrical networks.
+                                    </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> 
+                        <div id="BG" class="justify-content-center vertical-center col-md-6 order-first order-md-2">
+                            <h2 class="display-2">Work</h2>
+                        </div>
+                    </div>
+            </section>
+            <!-- Education Sectiion ends -->
+
+        </section>
+        <!-- Work section ends -->
             <!-- Education Sectiion begins -->
             <section id="education">
                 <div class="row text-center align-items-center">
@@ -96,7 +251,7 @@
                                 <div class="text-left">
                                     <h3 id="schoolName">Universidad Ana G. Méndez</h3>
                                     <h4>Aug 2016 - Present</h4>
-                                    <h5>3.44 GPA</h5>
+                                    <h5>3.40 GPA</h5>
                                     <p class="lead">Absolutley love my experience so far with programming. I've learned 
                                         about Data Structures and Algorithms using languages such as C++ and Java 
                                         and also learned about the in's and out's of Operating Systems 
@@ -120,100 +275,7 @@
             </section>
             <!-- Education Section ends -->
 
-            <!-- Work Sectiion begins -->
-            <section id="work">
-                <div class="row text-center align-items-center">
-                    <div class="col-md-6 text-center">
-                        <div class="row justify-content-center">
-                            <div class="col-10 col-lg-8 sideContent mb-md-0 py-5 ">
-                                <div class="text-left">
-                                        <h3>Universidad Ana G. Méndez</h3>
-                                        <h4>Vice-President</h4>
-                                        <h5>Aug 2018 - Present</h5>
-                                        <p class="lead">I am the Vice-President of Hack UAGM, which is a non-profit computer engineering organization in UAGM that 
-                                            is focused on bringing certain tools to fellow collegues that may need to further their
-                                            knowledge in the field pertaining to computer science and engineering. We do so by providing
-                                            programming workshops, hackathons and company tours realted to the field.
-                                        </p>
-                                        <br>
-                                        <h3>Universidad Ana G. Méndez</h3>
-                                        <h4>Electrical Networks Tutor</h4>
-                                        <h5>Feb 2019 - Present</h5>
-                                        <p class="lead">As an Electrical Networks tutor, I help fellow students with topics
-                                            such as KCL/KVL, Thevenin and Norton Theorems, mesh analysis, nodal analysis and other 
-                                            topics related to circuits and electrical networks.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> 
-                        <div id="BG" class="justify-content-center vertical-center col-md-6 order-first order-md-2">
-                            <h2 class="display-2">Work</h2>
-                        </div>
-                    </div>
-            </section>
-            <!-- Education Sectiion ends -->
-
         </section>
-        <!-- Work section ends -->
-
-        <!-- Software section begins -->
-        <section id="software">
-                <div class="row text-center align-items-center">
-                    <div id="BG" class="justify-content-center vertical-center col-md-6">
-                        <h2 class="display-2">Software</h2>
-                    </div> 
-                    <div class="col-md-6 text-center">
-                        <div class="row justify-content-center">
-                            <div class="col-10 col-lg-8 sideContent py-5">
-                                    <table class="table">
-                                            <thead class="thead-dark">
-                                                <tr>
-                                                    <th scope="col">Title</th>
-                                                    <th scope="col">Description</th>
-                                                    <th scope="col">Language</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                    <tr>
-                                                        <td><a href="https://github.com/shervinf1/BlackBookStrength"><u>BlackBookStrength</u></a></td>
-                                                        <td>Android application I am making for powerlifting</td>
-                                                        <td>Java</td>
-                                                    </tr>
-                                                <tr>
-                                                    <td><a href="https://github.com/shervinf1/shervinf1.github.io"><u>Personal Website</u></a></td>
-                                                    <td>This portfolio</td>
-                                                    <td>HTML</td>
-                                                </tr>
-                                                <tr>
-                                                    <td><a href="https://github.com/shervinf1/Library"><u>Library Database</u></a></td>
-                                                    <td>Library database using data structures such as binary search trees, circular doubly linked list and singly linked lists.</td>
-                                                    <td>C++</td>
-                                                </tr>
-                                                <tr>
-                                                    <td><a href="https://github.com/shervinf1/CourseScheduler"><u>Course Scheduler</u></a></td>
-                                                    <td>Program with a GUI that will allow you to input your courses and display them in a weekly calender format</td>
-                                                    <td>Java</td>
-                                                </tr>
-                                                <tr>
-                                                    <td><a href="https://github.com/shervinf1/FlashChat-Firebase-Android"><u>FlashChat App</u></a></td>
-                                                    <td>WhatsApp clone for Android, using Firebase Authentication and SharedPreferences</td>
-                                                    <td>Java</td>
-                                                </tr>
-                                                <tr>
-                                                    <td><a href="https://github.com/shervinf1/Dicee"><u>Dicee</u></a></td>
-                                                    <td>Android app that works as a random dice thrower</td>
-                                                    <td>Java</td>
-                                                </tr>
-                                            </tbody>
-                                    </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </section>
-        <!-- Software section ends -->
         <!-- About section ends -->
 
         <!-- Contact Section begins -->
