Fixed column problem with about section

--- a/index2.html
+++ b/index2.html
@@ -62,19 +62,20 @@
        <section id="about" class="m-5">
            <section id="profile">
             <div class="container">
-                <h1 id="sectionLabels" class="display-2" style="text-align: center;">About Me</h1>
+                <h1 id="sectionLabels" class="display-2 mb-5" style="text-align: center;">About Me</h1>
                 <div class="row">
-                    <div class="column">
+                    <div class="col-lg-5">
                         <img id="me" src="images/me.jpeg" class="mr-5" style="float: left;" alt="">
-                        <h2 id="myName" class="">Shervin Firouzdehghan</h2>
+                    </div>
+                    <div class="col-lg-7">
+                        <h2 class="">Shervin Firouzdehghan</h2>
                         <br>
-                        <p id="myBio" class="lead">I am a computer engineering undergraduate student at Universidad Ana G. Mendez
+                        <p class="lead">I am a computer engineering undergraduate student at Universidad Ana G. Mendez
                             in Gurabo, mainly focused on learning about programming in and out of the classroom, whether 
                             it's about mobile and web development or all the way up to cyber security and ethical hacking. 
                             I love structure and order and making sure everything is well put together when it comes to writing code.
                             Also I'm a fan of working in teams seeing as two heads are better than one.
                         </p>
-                    </div>
                     </div>
                 </div>
             </div>
@@ -84,7 +85,7 @@
                     <!-- Software section begins -->
         <section id="software" class="m-5">
             <div class="container">
-                <h1 id="sectionLabels" style="text-align: center;">Projects</h1>
+                <h1 id="sectionLabels" class="mb-5" style="text-align: center;">Recent Projects</h1>
             <div class="row">
                 <div class="column">
                   <img src="images/Login.jpg" alt="Snow" style="width:100%">
