Removed an extra column in modal

--- a/index.html
+++ b/index.html
@@ -106,19 +106,15 @@
             <div id="myModal" class="modal">
                 <div class="modal-content">
                     <span onclick="spanClick()" class="close">&times;</span>
-                    <div class="row">
+                    <div class="row m-5">
                         <div class="col-lg-6">
-                            <div class="row">
-                                <div class="col-lg-12 m-5">
-                                    <div class="w3-content w3-display-container">
-                                        <img id="modalImage1" src="images/1.jpg" class="mySlides ml-3 mr-3" alt="">
-                                        <img id="modalImage2" src="images/2.jpg" class="mySlides ml-3 mr-3" alt="">
-                                        <img id="modalImage3" src="images/2.jpg" class="mySlides ml-3 mr-3" alt="">
+                        <div class="w3-content w3-display-container">
+                            <img id="modalImage1" src="images/1.jpg" class="mySlides ml-3 mr-3" alt="">
+                            <img id="modalImage2" src="images/2.jpg" class="mySlides ml-3 mr-3" alt="">
+                            <img id="modalImage3" src="images/2.jpg" class="mySlides ml-3 mr-3" alt="">
 
-                                        <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-                                        <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
-                                      </div>
-                                </div>
+                            <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+                            <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
                             </div>
                         </div>
                         <div class="col-lg-6">
