Added width attribute to landing page image

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h1 id="sectionLabels" class="display-2 mb-5" style="text-align: center;">About Me</h1>
                 <div class="row">
                     <div class="col-lg-5">
-                        <img id="me" src="images/me.jpeg" class="mr-5" style="float: left;" alt="">
+                        <img id="me" src="images/me.jpeg" class="" style="float: left;" alt="">
                     </div>
                     <div class="col-lg-7">
                         <h2 class="">Shervin Firouzdehghan</h2>
@@ -133,7 +133,7 @@
 
 
             <!-- Work Sectiion begins -->
-            <section id="work">
+            <section id="work" class="p-5">
                 <div id="" class="container">
                     <h1 id="sectionLabels" class="display-2" style="text-align: center;">Experience</h1>
                     <div>
@@ -186,7 +186,7 @@
         </section>
         <!-- Work section ends -->
             <!-- Education Sectiion begins -->
-            <section id="education">
+            <section id="education" class="p-5">
                 <div class="container">
                     <h1 id="sectionLabels" class="display-2" style="text-align: center;">Education</h1>
                         <h3 id="schoolName">Universidad Ana G. Méndez</h3>
