--- a/dashboard.html
+++ b/dashboard.html
@@ -23,8 +23,8 @@
                 </ul>
             </div>
         </nav>
-        <div class="container m-5">
-            <input type="text" id="myInput" onkeyup="searchTable()" placeholder="Search for applications">
+        <div class="container mt-5" ">
+            <input type="text" id="myInput" onkeyup="searchTable()" style="width: 400px;" placeholder="Search for applications">
             <table class="table" id="applicationsTable">
                 <thead class="thead-dark">
                     <tr>
